tests/ui/on-unimplemented/resolving/identical_names_do_not_trigger.stderr
error[E0277]: the regular message
  --> $DIR/identical_names_do_not_trigger.rs:19:18
   |
LL |     let x: Foo = module::FromIterator::from_iter(iter);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `module::FromIterator<{integer}>` is not implemented for `Foo`
  --> $DIR/identical_names_do_not_trigger.rs:15:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/identical_names_do_not_trigger.rs:10:5
   |
LL |     pub trait FromIterator<A>: Sized {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
